URL for uploading XML

--- a/website/README
+++ b/website/README
@@ -11,6 +11,9 @@ on verigames-dev.cs.washington.edu
 
 For now, there are global permissions to read, write and execute this directory.
 
+To upload an XML file:
+https://verigames-dev.cs.washington.edu/admin/demo/
+
 --------------------------------
 
 Site Structure:
