--- a/java/Translation/build.xml
+++ b/java/Translation/build.xml
@@ -6,6 +6,7 @@
   <property name="lib" location="lib"/>
   <property name="dist" location="../dist"/>
   <property name="doc" location="doc"/>
+  <property name="xom" location="${lib}/xom-1.2.10.jar"/>
   <property environment="env"/>
 
   <property name="checkers.jar" location="${env.CHECKERS}/binary/checkers.jar"/>
@@ -28,7 +29,7 @@
 
   <target name="build">
     <mkdir dir="${bin}"/>
-    <jsr308.javac classpath="${dist}/checker-framework-inference.jar;${lib}/junit-4.8.2.jar;${lib}/xom-1.2.7.jar" destdir="${bin}" includeAntRuntime="false" debug="true">
+    <jsr308.javac classpath="${dist}/checker-framework-inference.jar;${lib}/junit-4.8.2.jar;${xom}" destdir="${bin}" includeAntRuntime="false" debug="true">
       <compilerarg value="-Xlint"/>
       <src>
         <pathelement path="${src}"/>
@@ -38,7 +39,7 @@
 
   <target name="buildall">
     <mkdir dir="${bin}"/>
-    <jsr308.javac classpath="${dist}/checker-framework-inference.jar;${lib}/junit-4.8.2.jar;${lib}/xom-1.2.7.jar" destdir="${bin}" includeAntRuntime="false" debug="true">
+    <jsr308.javac classpath="${dist}/checker-framework-inference.jar;${lib}/junit-4.8.2.jar;${xom}" destdir="${bin}" includeAntRuntime="false" debug="true">
       <compilerarg value="-Xlint"/>
       <compilerarg value="-J-Djsr308_imports=checkers.interning.quals.*:checkers.nullness.quals.*:checkers.regex.quals.*:checkers.signature.quals.*"/>
       <src>
@@ -52,7 +53,7 @@
   <target name="check-nullness" description="Check for nullness errors" depends="clean">
     <mkdir dir="${bin}"/>
     <!-- use jsr308.javac instead of javac -->
-    <jsr308.javac classpath="${dist}/checker-framework-inference.jar;${lib}/junit-4.8.2.jar;${lib}/xom-1.2.7.jar" srcdir="${src}" destdir="${bin}" excludes="**/sampleLevels/**,**/BuildingTools.java" includeAntRuntime="false">
+    <jsr308.javac classpath="${dist}/checker-framework-inference.jar;${lib}/junit-4.8.2.jar;${xom}" srcdir="${src}" destdir="${bin}" excludes="**/sampleLevels/**,**/BuildingTools.java" includeAntRuntime="false">
       <compilerarg line="-processor checkers.nullness.NullnessChecker"/>
       <compilerarg value="-Astubs=checker-stubs"/>
       <!-- optional, to not check library bodies: <compilerarg value="-AskipClasses=^(java\.awt\.|javax\.swing\.)"/> -->
