Lots of improvements to reverse mapping and connector compression
Summary of changes:
 - reverse mapping is now based on variable IDs rather than edge IDs,
   since edge IDs can change when you export/reimport a world
 - NodeGraph.addEdge() now returns the new edge
 - refactored connector compression a little bit
 - added strict test for reverse mapping of the connector compression
   optimization
 - added more tests for reverse mapping
 - fixed several bugs in reverse mapping

--- a/java/optimizer/README
+++ b/java/optimizer/README
@@ -60,6 +60,16 @@ Sample usage:
     ./transfer-solution.sh --from opt.xml --to my-file.xml --mapping map.txt --out my-file-solved.xml
 
 
+Known Issues
+-------------
+
+Pinched chutes are not supported. To make this work, change all pinched chutes
+to immutable narrow ones, which are equivalent. (Note that there have recently
+been discussions of removing pinched pipes entirely, so you might not need to
+worry about this. As of this writing, pinched pipes are only created by the
+nullness type system.)
+
+
 Hacking
 -------------
 
